<resources>
    <string name="app_name">GroupTravelPlanner</string>
    <string name="to_sign_in_page_dialog">Already have an account? <b>Sign-in</b></string>
    <string name="to_sign_up_page_dialog">Don\'t have an account? <b>Sign-up</b></string>

    <string-array name="genders">
        <item>Not Specified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_friends">Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="api_key">AIzaSyB4QT2f2fyMQ8gDILgUEi5xBl_NKiGt_fo</string>
    <string name="title_activity__in_places">Activity_InPlaces</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Setting</string>
    <string name="plan_overview_sample">Mon, 1 Oct (09:00) : Soekarno-Hatta International Airport \n...</string>
    <string name="bookFrom">From:</string>
    <string name="bookOrigin">Origin</string>
    <string name="bookTo">To:</string>
    <string name="bookDestination">Destination</string>
    <string name="buttonFindFlight">FIND FLIGHT</string>
    <string name="bookTrainName">Train Name</string>
    <string name="bookFlightName">Airline Name</string>
    <string name="bookDivider">-</string>
    <string name="bookFlightNumber">Flight Number</string>
    <string name="bookDepartCity">Depart City</string>
    <string name="bookDepartTime">Depart Time</string>
    <string name="bookArriveCity">Arrive City</string>
    <string name="bookArriveTime">Arrive Time</string>
    <string name="bookPrice">Price</string>
    <string name="buttonFindTrain">FIND TRAIN</string>
    <string name="pick_destination">Pick Destination</string>
    <string name="open_now">Open Now</string>
    <string name="closed">Closed</string>
    <string name="search_hotel">Search hotel</string>
    <string name="arrow">Arrow</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="current_group_plan">You don\'t have any plan in progress...\nAsk the group leader to create a plan!</string>

</resources>
