<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/trainsData"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:id="@+id/trainData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/trainName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookTrainName"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/departData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trainData">

            <TextView
                android:id="@+id/departCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookDepartCity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/departTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookDepartTime"
                android:layout_below="@id/departCity"
                android:textSize="12sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_grey_20dp"
            android:layout_toEndOf="@id/departData"
            android:layout_below="@id/trainData"
            android:layout_margin="4sp"
            android:contentDescription="@string/arrow" />

        <RelativeLayout
            android:id="@+id/arriveData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trainData"
            android:layout_toEndOf="@id/arrow"
            android:layout_marginStart="4sp" >

            <TextView
                android:id="@+id/arriveCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookArriveCity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/arriveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookArriveTime"
                android:layout_below="@id/arriveCity"
                android:textSize="12sp" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/priceLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/trainsData"
        android:layout_margin="8dp" >

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/bookPrice"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>