<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseEventActivity">

    <LinearLayout
        android:id="@+id/layoutOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bookFrom"
            android:layout_margin="8dp" />

        <AutoCompleteTextView
            android:id="@+id/origin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="4"
            android:hint="@string/bookOrigin"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layoutOrigin">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bookTo"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <AutoCompleteTextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="4"
            android:hint="@string/bookDestination"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/resultList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDestination">

        <Button
            android:id="@+id/searchButton"
            android:background="@color/background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonFindTrain"
            android:layout_margin="8dp"/>

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_below="@id/searchButton">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

        </RelativeLayout>

        <ListView
            android:id="@+id/listTravel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchButton"/>

    </RelativeLayout>

</RelativeLayout>